--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Domen\Autor.cs" />
+    <Compile Include="Domen\Biblioteka.cs" />
     <Compile Include="Domen\IEntitet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
