Dodata klasa BrokerBaze koja komunicira sa bazom

--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Baza\BrokerBaze.cs" />
     <Compile Include="Domen\Autor.cs" />
     <Compile Include="Domen\Biblioteka.cs" />
     <Compile Include="Domen\Bibliotekar.cs" />
