Dodata sistemska operacija baza klasa koju sve so nasledjuju

--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Domen\StatusRezervacije.cs" />
     <Compile Include="Domen\Stavka.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SistemskeOperacije\SistemskaOperacijaBaza.cs" />
     <Compile Include="Transfer\Odgovor.cs" />
     <Compile Include="Transfer\Operacije.cs" />
     <Compile Include="Transfer\Receiver.cs" />
