--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -72,7 +72,13 @@
     <Compile Include="SistemskeOperacije\KnjigaSO\VratiKnjigePoNaslovuSO.cs" />
     <Compile Include="SistemskeOperacije\KnjigaSO\VratiSveKnjigeSO.cs" />
     <Compile Include="SistemskeOperacije\LoginSO\LoginSO.cs" />
+    <Compile Include="SistemskeOperacije\RezervacijaSO\KreirajRezervacijuSO.cs" />
+    <Compile Include="SistemskeOperacije\RezervacijaSO\ObradiRezervacijuSO.cs" />
+    <Compile Include="SistemskeOperacije\RezervacijaSO\VratiNeobradjeneRezervacijeSO.cs" />
+    <Compile Include="SistemskeOperacije\RezervacijaSO\VratiObradjeneRezervacijeSO.cs" />
+    <Compile Include="SistemskeOperacije\RezervacijaSO\VratiSveRezervacijeClanaSO.cs" />
     <Compile Include="SistemskeOperacije\SistemskaOperacijaBaza.cs" />
+    <Compile Include="SistemskeOperacije\StavkaSO\VratiStavkeRezervacijeSO.cs" />
     <Compile Include="Transfer\Odgovor.cs" />
     <Compile Include="Transfer\Operacije.cs" />
     <Compile Include="Transfer\Receiver.cs" />
