--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Kontroler\Kontroler.cs" />
+    <Compile Include="Obrada\BibliotekarObrada.cs" />
+    <Compile Include="Obrada\ClanObrada.cs" />
     <Compile Include="ServerForma.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,6 +57,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServerKlasa.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
