--- a/Klijent/Klijent.csproj
+++ b/Klijent/Klijent.csproj
@@ -102,6 +102,12 @@
     <Compile Include="Bibliotekar\UserControls\UCProfil.Designer.cs">
       <DependentUpon>UCProfil.cs</DependentUpon>
     </Compile>
+    <Compile Include="Clan\FrmClan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Clan\FrmClan.Designer.cs">
+      <DependentUpon>FrmClan.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -137,7 +143,8 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Clan\" />
+    <Folder Include="Clan\Kontroler\KontroleriUC\" />
+    <Folder Include="Clan\UserControls\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj">
