--- a/Server/App.config
+++ b/Server/App.config
@@ -1,6 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+	</startup>
+	<connectionStrings>
+		<add name="psdb" connectionString="Data Source=DESKTOP-BP1HPT2;Initial Catalog=Projekat_Biblioteka;Integrated Security=true" />
+	</connectionStrings>
+	<appSettings>
+		<add key="ip" value="127.0.0.1"/>
+		<add key="port" value="9999"/>
+	</appSettings>
 </configuration>
